<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_above="@+id/button_signup"
        android:layout_alignLeft="@+id/button_signup"
        android:layout_alignStart="@+id/button_signup"
        android:layout_marginBottom="23dp" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="217dp"
        android:layout_height="39dp"
        android:text="@string/sign_up"
        android:layout_marginBottom="215dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/button_signup"
        android:layout_alignStart="@+id/button_signup"
        android:layout_alignRight="@+id/button_signup"
        android:layout_alignEnd="@+id/button_signup">
    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_above="@+id/status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect" />

    </LinearLayout>

</RelativeLayout>
